--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -4,7 +4,7 @@
   <div class="col-md-6"><%= image_tag @listing.image_url(:medium) %></div>
   <div class="col-md-6">
     <h3><%= @listing.name %></h3>
-    <p><%= number_to_currency(@listing.price) %></p>
+    <h5><%= number_to_currency(@listing.price) %></h5>
     <p><%= @listing.description %></p>
   </div>
 </div>
