Change Link For Banner Image to Use Dropbox

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -42,5 +42,13 @@ body {
   }
 }
 
+.jumbotron {
+  text-align: center;
+  background-image: url('https://www.dropbox.com/s/vhz0frxkz9cx9fg/Etsy-Craft.jpg?dl=0&raw=1');
+    h1, h2 {
+      font-family: guardian-egypt, georgia, serif;
+      }
+}
+
 
 
