--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -1,3 +1,8 @@
+<div class="jumbotron">
+  <h1>Handcrafted Items</h1><br />
+  <h2>Discover One-of-A Kind Items.</h2>
+</div>
+
 <div class="center">
 
   <h1>Listing Listings</h1>
