--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -4,6 +4,9 @@
     <h3><%= @listing.name %></h3>
     <h5><%= number_to_currency(@listing.price) %></h5>
     <p><%= @listing.description %></p>
+    <br />
+    <div class = "center">
+      <%= link_to "Buy It Now", new_listing_order_path(@listing), class: "btn btn-success" %>
   </div>
 </div>
 <% if current_user == @listing.user %>
